# ocaml-expect

./: .travis.yml  CHANGES.txt  Makefile  README.txt  expect-pcre.opam  expect-str.opam  expect.opam  opam
src/expect/: expect.ml  expect.mli  jbuild  stringext.ml
src/expect-pcre/: jbuild
src/expect-str/: jbuild
test/: jbuild  qa.ml  test.ml  test_common.ml  test_pcre.ml
test/expect/: jbuild  test.ml
test/expect-pcre/: jbuild
test/expect-str/: jbuild  test_str.ml
